CloudGaia Academy DevOps/main/default/objects/Booking__c/fields/User_AirBnb__c.field-meta.xml
<CustomField>
    <fullName>User_AirBnb__c</fullName>
    <label>User_AirBnb</label>
    <referenceTo>User_AirBnb__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>